# stelmach-snhu-cs-499

./: README.md  generate-project-list.mjs  index.html  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js
.github/workflows/: deploy.yaml
src/: app.pcss
src/lib/components/: code-file.ts  code-viewer-nav.svelte  code-viewer.svelte  light-switch.svelte  side-nav.svelte
src/lib/components/headers/: travlr-header.svelte
src/lib/page-parts/: artifact-1.svelte  artifact-2.svelte  artifact-3.svelte  code-review.svelte  intro.svelte  self-assessment.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte
static/: projectList.json
static/projects/animal-shelter/enhanced/: README.md  pyproject.toml
static/projects/animal-shelter/enhanced/app/: __init__.py  auth.py  crud.py  models.py  routes.py
static/projects/animal-shelter/enhanced/config/: config.py
static/projects/animal-shelter/enhanced/instance/: animals.db
static/projects/animal-shelter/enhanced/static/js/: map.js
static/projects/animal-shelter/enhanced/templates/: admin.html  base.html  index.html  login.html
static/projects/animal-shelter/original/: ProjectTwoDashboard.py  animal_shelter.py
static/projects/embedded-thermostat/enhanced/: Stelmach_CC3220S_Thermostat_v2.c
static/projects/embedded-thermostat/original/: Stelmach_CC3220S_Thermostat_v1.c
static/projects/travlr/enhanced/: README.md  package-lock.json  package.json  tsconfig.json
static/projects/travlr/original/: README.md  app.cjs  docker-compose.yaml  global.d.ts  test.http
(+36 files in other folders)
