[project]
name = "animal-shelter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dennis James Stelmach", email = "dj@dstelmach.com"},
]
dependencies = [
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "Flask-WTF>=1.2.1",
    "flask-bcrypt>=1.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
start = "python run.py"
